test_yuriiq/catalog/language/german/information/contact.php
<?php

// text
$_['text_location']	= 'Unser Standort';
$_['text_telephone']	= 'Telefon:';
$_['text_contact']	= 'Kontaktformular';
$_['text_address']	= 'Adresse:';
$_['text_email']	= 'Email:';
$_['text_fax']	= 'Fax:';
$_['text_message']	= '<p>Die Anfrage wurde erfolgreich versendet!</p>';

// error
$_['error_captcha']	= 'Verifizierungscode stimmt nicht mit dem im Bild angezeigten Code überein!';
$_['error_enquiry']	= 'Anfrage muss zwischen 10 und 3000 Zeichen lang sein!';
$_['error_email']	= 'Emailadresse ist nicht gültig!';
$_['error_name']	= 'Name muss zwischen 3 und 32 Zeichen lang sein!';

// email
$_['email_subject']	= 'Anfrage %s';

// entry
$_['entry_name']	= 'Vorname:';
$_['entry_captcha']	= 'Bitte den unten dargestellten Code einfügen:';
$_['entry_enquiry']	= 'Anfrage:';
$_['entry_email']	= 'Emailadresse:';

// heading
$_['heading_title']	= 'Kontakt';
?>